<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="195dp"
        android:layout_marginBottom="50sp"
        app:srcCompat="@drawable/popcorn" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:inputType="textMultiLine"

        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnInternetReviews"
        android:layout_width="201dp"
        android:layout_height="78dp"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/internet_reviews_button_text" />

    <Button
        android:id="@+id/btnMyReviews"
        android:layout_width="201dp"
        android:layout_height="78dp"
        android:textSize="20sp"
        android:backgroundTint="@color/buttons_color"
        android:text="@string/my_reviews_button_text" />



</LinearLayout>
