<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_movie_back_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing"
        app:icon="@drawable/chevron_left"
        app:iconSize="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginBottom="16dp"
        android:text="@string/add_movie_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_movie_back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_movie_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginTop="@dimen/default_spacing_big"
        android:layout_marginEnd="@dimen/default_spacing"
        android:hint="@string/add_movie_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_movie_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_movie_year_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:hint="@string/add_movie_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_movie_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_movie_review_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:hint="@string/add_movie_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_movie_year_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_movie_image_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/default_spacing_big"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:text="@string/choose_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_movie_review_input" />

    <TextView
        android:id="@+id/add_movie_image_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/no_image_was_chosen"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintBottom_toBottomOf="@id/add_movie_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/add_movie_image_button"
        app:layout_constraintTop_toTopOf="@id/add_movie_image_button" />

    <Button
        android:id="@+id/add_movie_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginTop="@dimen/default_spacing_big"
        android:layout_marginEnd="@dimen/default_spacing"
        android:text="@string/add_submit_button_text"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttons_green_blueish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_movie_image_button" />

</androidx.constraintlayout.widget.ConstraintLayout>