<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background_gray"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_gray">

        <Button
            android:id="@+id/movie_detail_back_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            app:icon="@drawable/chevron_left"
            android:backgroundTint="@color/buttons_green_blueish"
            app:iconSize="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movie_detail_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing_big"
            android:layout_marginEnd="@dimen/default_spacing_big"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxHeight="400dp"
            android:src="@drawable/image_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_back_button" />

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing_big"
            android:textColor="@color/text_green"
            android:layout_marginTop="@dimen/default_spacing"
            android:text="@string/movie_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_image" />

        <TextView
            android:id="@+id/movie_detail_year"
            android:layout_width="0dp"
            android:textColor="@color/text_green"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing_big"
            android:layout_marginTop="@dimen/default_spacing_small"
            android:text="@string/movie_year"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_title" />

        <TextView
            android:id="@+id/movie_detail_review"
            android:layout_width="0dp"
            android:textColor="@color/text_green"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing_big"
            android:layout_marginTop="@dimen/default_spacing"
            android:layout_marginEnd="@dimen/default_spacing"
            android:text="@string/movie_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_year" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>